# discord-rs

./: Cargo.toml  README.md
src/: main.rs
src/commands/: meta.rs
src/util/loginUtil/: Cargo.toml
src/util/loginUtil/src/commands/: math.rs
